WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303752
SpeculationRules prefetch-uses-cache test is failing
https://bugs.webkit.org/show_bug.cgi?id=303752
Summary
SpeculationRules prefetch-uses-cache test is failing
Yoav Weiss
Reported
2025-12-08 06:08:18 PST
The prefetch-uses-cache test is failing on WebKit's speculation rules implementation. We should make sure that it passes: * Enable a `deliveryType` of "cache" * Make sure that the results we get fit the expected ones
Attachments
Add attachment
proposed patch, testcase, etc.
Yoav Weiss
Comment 1
2025-12-08 06:26:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55035
EWS
Comment 2
2025-12-10 13:38:58 PST
Committed
304259@main
(eb08df79713c): <
https://commits.webkit.org/304259@main
> Reviewed commits have been landed. Closing PR #55035 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-10 13:39:12 PST
<
rdar://problem/166249265
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug